data/daffy/cp4ba/templates/ops/adsMlServiceDeployment.yaml
############################################################
#Author           : Gerry Baird
#Author email     : gerry.baird@uk.ibm.com
#Original Date    : 2022-05-10
#Initial Version  : v2022-05-23
############################################################
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ads-ml-service-deployment
  namespace: @CP4BA_OPS_ML_NAMESPACE@
  labels:
    app: open-prediction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-prediction
  template:
    metadata:
      labels:
        app: open-prediction
    spec:
      volumes:
        - name: model-conf
          configMap:
            name: ads-ml-service-model-conf
            defaultMode: 420
      containers:
        - name: open-prediction
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: model-conf
              mountPath: /usr/src/ads-ml-service/preload-conf.yaml
              subPath: preload-conf.yaml
          terminationMessagePolicy: File
          image: >-
            image-registry.openshift-image-registry.svc:5000/ads-ml-service/ads-ml-service:latest
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
