data/daffy/cp4ba/templates/ops/service.yaml
############################################################
#Author           : Gerry Baird
#Author email     : gerry.baird@uk.ibm.com
#Original Date    : 2022-05-10
#Initial Version  : v2022-05-23
############################################################
apiVersion: v1
kind: Service
metadata:
  name: ads-ml-service-service
  namespace: @CP4BA_OPS_ML_NAMESPACE@
  labels:
    app: open-prediction
spec:
  type: NodePort
  selector:
    app: open-prediction
  ports:
    - name: open-prediction-service-backend
      protocol: TCP
      port: 8080                         # Port that the ops actually expose. By default targetPort := port
      targetPort: 8080
      nodePort: 30000                    # External port of cluster
